bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - GroupedProduction3 (Optimized).snap
---
source: bench/tests/plans/wind_farm.rs
expression: canonicalize_uuids(&explanation.optimized_logical_plan.to_string())
---
Projection: ENV_PT(site_label) AS site_label, ENV_PT(wtur_label) AS wtur_label, year AS year, month AS month, day AS day, hour AS hour, minute_10 AS minute_10, ENV_PT(00000000000000000000000000000001) AS avg_val
  Aggregate: groupBy=[[site_label AS site_label, wtur_label AS wtur_label, ENV_PT(year) AS year, ENV_PT(month) AS month, ENV_PT(day) AS day, ENV_PT(hour) AS hour, ENV_PT(minute_10) AS minute_10]], aggr=[[AVG(ENC_TV(val)) AS 00000000000000000000000000000001]]
    Projection: val, wtur_label, site_label, minute_10, hour, day, MONTH(__common_expr_1) AS month, YEAR(__common_expr_1) AS year
      Projection: ENC_TV(t) AS __common_expr_1, val, wtur_label, site_label, minute_10, HOURS(__common_expr_2) AS hour, DAY(__common_expr_2) AS day
        Projection: __common_expr_3 AS __common_expr_2, val, wtur_label, site_label, t, MUL(Union 9:10, FLOOR(DIV(MINUTES(__common_expr_3), Union 7:Some(00000000000000000000000000000002),36,16))) AS minute_10
          Projection: ENC_TV(t) AS __common_expr_3, val, wtur_label, site_label, t
            Projection: rhs.val AS val, rhs.wtur_label AS wtur_label, rhs.site_label AS site_label, rhs.t AS t
              Inner Join: lhs.ts = rhs.ts
                SubqueryAlias: lhs
                  QuadPattern (?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"), active_graph: Union of [DefaultGraph] 
                SubqueryAlias: rhs
                  Projection: rhs.val AS val, rhs.wtur_label AS wtur_label, rhs.site_label AS site_label, rhs.ts AS ts, rhs.t AS t
                    Inner Join: lhs.generator = rhs.generator
                      SubqueryAlias: lhs
                        QuadPattern (?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>), active_graph: Union of [DefaultGraph] 
                      SubqueryAlias: rhs
                        Projection: rhs.val AS val, rhs.wtur_label AS wtur_label, rhs.site_label AS site_label, rhs.generator AS generator, rhs.ts AS ts, rhs.t AS t
                          Inner Join: lhs.gensys = rhs.gensys
                            SubqueryAlias: lhs
                              QuadPattern (?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>), active_graph: Union of [DefaultGraph] 
                            SubqueryAlias: rhs
                              Projection: rhs.val AS val, rhs.wtur_label AS wtur_label, rhs.site_label AS site_label, rhs.gensys AS gensys, rhs.generator AS generator, rhs.ts AS ts, rhs.t AS t
                                Inner Join: lhs.wtur = rhs.wtur
                                  SubqueryAlias: lhs
                                    QuadPattern (?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>), active_graph: Union of [DefaultGraph] 
                                  SubqueryAlias: rhs
                                    Projection: rhs.val AS val, rhs.wtur_label AS wtur_label, rhs.site_label AS site_label, rhs.wtur AS wtur, rhs.gensys AS gensys, rhs.generator AS generator, rhs.ts AS ts, rhs.t AS t
                                      Inner Join: lhs.site = rhs.site
                                        SubqueryAlias: lhs
                                          QuadPattern (?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>), active_graph: Union of [DefaultGraph] 
                                        SubqueryAlias: rhs
                                          Projection: lhs.val AS val, rhs.wtur_label AS wtur_label, rhs.site AS site, rhs.site_label AS site_label, rhs.wtur AS wtur, rhs.gensys AS gensys, rhs.generator AS generator, rhs.ts AS ts, rhs.t AS t
                                            Inner Join: lhs.dp = rhs.dp
                                              SubqueryAlias: lhs
                                                QuadPattern (?dp <https://github.com/magbak/chrontext#hasValue> ?val), active_graph: Union of [DefaultGraph] 
                                              SubqueryAlias: rhs
                                                Projection: lhs.wtur_label AS wtur_label, rhs.site AS site, rhs.site_label AS site_label, rhs.wtur AS wtur, rhs.gensys AS gensys, rhs.generator AS generator, rhs.ts AS ts, rhs.dp AS dp, rhs.t AS t
                                                  Inner Join: lhs.wtur_asp = rhs.wtur_asp
                                                    SubqueryAlias: lhs
                                                      QuadPattern (?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label), active_graph: Union of [DefaultGraph] 
                                                    SubqueryAlias: rhs
                                                      Projection: lhs.site AS site, lhs.site_label AS site_label, rhs.wtur_asp AS wtur_asp, rhs.wtur AS wtur, rhs.gensys AS gensys, rhs.generator AS generator, rhs.ts AS ts, rhs.dp AS dp, rhs.t AS t
                                                        Inner Join: lhs.site = rhs.site Filter: coalesce(coalesce(EBV(EQ(ENC_TV(lhs.site_label), Union 3:{value:Wind Mountain,language:})), Boolean(false)) AND coalesce(EBV(GEQ(ENC_TV(rhs.t), Union 10:{value:6379744601300.0000000000000000,offset:})), Boolean(false)), Boolean(false))
                                                          SubqueryAlias: lhs
                                                            QuadPattern (?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label), active_graph: Union of [DefaultGraph] 
                                                          SubqueryAlias: rhs
                                                            Projection: lhs.site AS site, lhs.wtur_asp AS wtur_asp, rhs.wtur AS wtur, rhs.gensys AS gensys, rhs.generator AS generator, rhs.ts AS ts, rhs.dp AS dp, rhs.t AS t
                                                              Inner Join: lhs.wtur_asp = rhs.wtur_asp
                                                                SubqueryAlias: lhs
                                                                  QuadPattern (?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp), active_graph: Union of [DefaultGraph] 
                                                                SubqueryAlias: rhs
                                                                  Projection: lhs.wtur AS wtur, lhs.wtur_asp AS wtur_asp, rhs.gensys AS gensys, rhs.generator AS generator, rhs.ts AS ts, rhs.dp AS dp, rhs.t AS t
                                                                    Inner Join: lhs.wtur = rhs.wtur
                                                                      SubqueryAlias: lhs
                                                                        QuadPattern (?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp), active_graph: Union of [DefaultGraph] 
                                                                      SubqueryAlias: rhs
                                                                        Projection: lhs.wtur AS wtur, rhs.gensys AS gensys, rhs.generator AS generator, rhs.ts AS ts, rhs.dp AS dp, rhs.t AS t
                                                                          Inner Join: lhs.gensys_asp = rhs.gensys_asp
                                                                            SubqueryAlias: lhs
                                                                              QuadPattern (?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp), active_graph: Union of [DefaultGraph] 
                                                                            SubqueryAlias: rhs
                                                                              Projection: lhs.gensys AS gensys, lhs.gensys_asp AS gensys_asp, rhs.generator AS generator, rhs.ts AS ts, rhs.dp AS dp, rhs.t AS t
                                                                                Inner Join: lhs.gensys = rhs.gensys
                                                                                  SubqueryAlias: lhs
                                                                                    QuadPattern (?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp), active_graph: Union of [DefaultGraph] 
                                                                                  SubqueryAlias: rhs
                                                                                    Projection: lhs.gensys AS gensys, rhs.generator AS generator, rhs.ts AS ts, rhs.dp AS dp, rhs.t AS t
                                                                                      Inner Join: lhs.generator_asp = rhs.generator_asp
                                                                                        SubqueryAlias: lhs
                                                                                          QuadPattern (?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp), active_graph: Union of [DefaultGraph] 
                                                                                        SubqueryAlias: rhs
                                                                                          Projection: lhs.generator AS generator, lhs.generator_asp AS generator_asp, rhs.ts AS ts, rhs.dp AS dp, rhs.t AS t
                                                                                            Inner Join: lhs.generator = rhs.generator
                                                                                              SubqueryAlias: lhs
                                                                                                QuadPattern (?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp), active_graph: Union of [DefaultGraph] 
                                                                                              SubqueryAlias: rhs
                                                                                                Projection: lhs.generator AS generator, lhs.ts AS ts, rhs.dp AS dp, rhs.t AS t
                                                                                                  Inner Join: lhs.ts = rhs.ts
                                                                                                    SubqueryAlias: lhs
                                                                                                      QuadPattern (?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts), active_graph: Union of [DefaultGraph] 
                                                                                                    SubqueryAlias: rhs
                                                                                                      Projection: lhs.ts AS ts, lhs.dp AS dp, rhs.t AS t
                                                                                                        Inner Join: lhs.dp = rhs.dp
                                                                                                          SubqueryAlias: lhs
                                                                                                            QuadPattern (?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp), active_graph: Union of [DefaultGraph] 
                                                                                                          SubqueryAlias: rhs
                                                                                                            Filter: EBV(LEQ(ENC_TV(t), Union 10:{value:6379749281300.0000000000000000,offset:}))
                                                                                                              QuadPattern (?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t), active_graph: Union of [DefaultGraph]
